[package]
name = "console-thingy"
version = "0.1.0"
edition = "2021"
include = [
    "/bundled-font",
    "/src",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
    "/README.md",
]

[features]
default = ["bundled-font", "gui", "tui"]
# default = ["bundled-font", "gui"]
bundled-font = ["dep:once_cell", "gui"]
gui = ["kludgine/app"]
kludgine = ["dep:kludgine"]
tui = ["dep:crossterm"]

[dependencies]
flume = "0.10.14"
anyhow = { version = "1.0.68", features = ["backtrace"] }
parking_lot = "0.12.1"
kludgine = { version = "0.4.0", optional = true, default-features = false, features = [
    "smol-rt",
] }
once_cell = { version = "1.17.0", optional = true }
crossterm = { version = "0.26.0", optional = true }

[dev-dependencies]
lipsum = "0.8.2"

[patch.crates-io]
kludgine = { git = "https://github.com/khonsulabs/kludgine", branch = "main" }
